# pgrid

./: README.md  meson.build
include/glad/: gl.h
include/pgrid/: log.h  pgrid.h
lib/: gl.c  log.c  pgrid.c
src/: main.c
src/examples/: bench.c  minimal.c
